<resources>
    <string name="app_name">Reminder</string>
    <string name="sharedPreferences" translatable="false">com.example.mobilecomputing</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="login_title">Login</string>
    <string name="editprofile_title">Edit profile</string>
    <string name="addreminder_title">Add reminder</string>
    <string name="action_virtual_location">Virtual location</string>
    <string name="action_create_account">Create an account</string>
    <string name="action_change_login">Login using fingerprint</string>
    <string name="action_change_login_finger">Login using credentials</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_profile_backtomain">Back to Main Screen</string>
    <string name="action_profile_edit">Edit profile</string>
    <string name="action_profiledit_changeusername">Change username</string>
    <string name="action_profiledit_changepassword">Change password</string>
    <string name="action_profileedit_backtoprofile">Back to Profile</string>
    <string name="action_addreminder_add">Apply</string>
    <string name="prompt_message">Message</string>
    <string name="prompt_time">Time</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_location">Select location</string>
    <string name="welcome">"Welcome !"</string>
    <string name="main_top_title">Remainders</string>
    <string name="action_main_add_remainder">Add reminder</string>
    <string name="action_main_profile">Go to Profile</string>
    <string name="action_main_logout">Logout</string>
    <string name="action_create_back_to_login">Back to Login</string>
    <string name="create_title">Create an account</string>
    <string name="reminder_message">Message:</string>
    <string name="reminder_time">Time:</string>
    <string name="reminder_date">Date:</string>
    <string name="reminder_location">Location:</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
</resources>